@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>32 bits - OpenXava</title>
+    <title>32-bit - OpenXava</title>
     <link rel="stylesheet" href="static/style.css" type="text/css">
     <link rel="stylesheet" href="highlight/highlight.css">
     <script src="highlight/highlight.js"></script>
@@ -11,14 +11,14 @@
     <div class="wiki" style="display: block;">
       <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
               <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
-          / </span> 32 bits</h1>
+          / </span> 32-bit</h1>
       OpenXava Studio (openxava.exe in Windows or openxava executable in
-      Mac/Linux) requires a 64 bits machine to work. However, you can use
-      OpenXava framework in a 32 bits computer, even the latest version. Just
-      download a 32 bits Java and a 32 bits Eclipse, then switch your Eclipse
+      Mac/Linux) requires a 64-bit machine to work. However, you can use
+      OpenXava framework in a 32-bit computer, even the latest version. Just
+      download a 32-bit Java and a 32-bit Eclipse, then switch your Eclipse
       workspace to use the one included in OpenXava distribution.</div>
     <div class="wiki" style="display: block;">
-      <h2 id="toc1">Install Java for 32 bits</h2>
+      <h2 id="toc1">Install Java for 32-bit</h2>
       Go to <a href="https://www.oracle.com/java/technologies/javase/javase-jdk8-downloads.html">Oracle
         JDK 8 download page</a>, there choose a distribution with x86 in the
       name (or i586 in the filename), like <i>Linux x86 Compressed Archive</i>
@@ -35,11 +35,11 @@
         with three subfolders: <i>doc, studio</i> and <i>workspace</i>. We're
         going to use the <i>workspace</i> folder in the next section. There is
         also an <i>openxava.exe</i> or <i>openxava</i> Linux executable in the
-        root, don't click on it, it does not work with 32 bits.</div>
+        root, don't click on it, it does not work with 32-bit.</div>
     </div>
     <div class="wiki" style="display: block;">
       <h2>Download and install Eclipse </h2>
-      Eclipse 2018-09 was the last with 32 bits support, so <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip">download
+      Eclipse 2018-09 was the last with 32-bit support, so <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip">download
         Eclipse 2018-09 for Windows 32</a> or <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-linux-gtk.tar.gz">for
         Linux 32</a>. Uncompress the downloaded file and click on the eclipse
       executable you have inside the <i>eclipse</i> folder. </div>
