@@ -118,7 +118,7 @@
           </a></li>
         <li><a class="wiki_link" href="intellij_en.html">IntelliJ IDEA</a></li>
         <li><a class="wiki_link" href="eclipse_en.html">Eclipse</a></li>
-        <li><a class="wiki_link" href="32bits_en.html">32 bits</a></li>
+        <li><a class="wiki_link" href="32-bit_en.html">32-bit</a></li>
         <li><a class="wiki_link" href="wtp_en.html">Eclipse Web Tools Platform</a></li>
         <li><a class="wiki_link" href="jboss_en.html">JBoss</a></li>
         <li><a class="wiki_link" href="websphere_en.html">WebSphere</a></li>
