@@ -123,7 +123,7 @@
             Firebird</a></li>
         <li><a href="intellij_es.html">IntelliJ IDEA</a></li>
         <li><a class="wiki_link" href="eclipse_es.html">Eclipse</a></li>
-        <li><a class="wiki_link" href="32bits_es.html">32 bits</a></li>
+        <li><a class="wiki_link" href="32-bit_es.html">32 bits</a></li>
         <li><a class="wiki_link" href="wtp_es.html">Eclipse Web Tools Platform</a></li>
         <li><a class="wiki_link" href="jboss_es.html">JBoss</a></li>
         <li><a class="wiki_link" href="websphere_es.html">WebSphere</a></li>
